refactor: 이름 예외처리 함수 접근제어자 private로 변경