@@ -9,13 +9,12 @@ import java.util.List;
 import org.junit.jupiter.api.Test;
 
 class NameValidatorTest {
-	NameValidator nameValidator = new NameValidator();
 
 	@Test
 	public void 빈_문자열_입력된_경우() {
 		String inputString = "";
 		assertThatThrownBy(() -> {
-			nameValidator.checkNull(inputString);
+			NameValidator.checkNameInput(inputString);
 		}).isInstanceOf(Exception.class);
 	}
 
@@ -23,7 +22,7 @@ class NameValidatorTest {
 	public void 이름이_공백인_경우() {
 		String name = "   ";
 		assertThatThrownBy(() -> {
-			nameValidator.checkSpace(name);
+			NameValidator.checkName(name);
 		}).isInstanceOf(Exception.class);
 	}
 
@@ -31,7 +30,7 @@ class NameValidatorTest {
 	public void 이름이_5자보다_큰_경우() {
 		String name = "abcdef";
 		assertThatThrownBy(() -> {
-			nameValidator.checkNameSize(name);
+			NameValidator.checkName(name);
 		}).isInstanceOf(Exception.class);
 	}
 
@@ -39,23 +38,23 @@ class NameValidatorTest {
 	public void 이름에_특수문자가_들어간_경우() {
 		String name = "주리!";
 		assertThatThrownBy(() -> {
-			nameValidator.checkSpecialChar(name);
+			NameValidator.checkName(name);
 		}).isInstanceOf(Exception.class);
 	}
 
 	@Test
 	public void 입력된_이름이_하나인_경우() {
-		List<String> nameList = new ArrayList<>(Arrays.asList("prodo"));
+		List<String> nameList = new ArrayList<>(List.of("prodo"));
 		assertThatThrownBy(() -> {
-			nameValidator.checkOneName(nameList);
+			NameValidator.checkNameList(nameList);
 		}).isInstanceOf(Exception.class);
 	}
 
 	@Test
 	public void 중복된_이름이_있는_경우() {
-		List<String> nameList = new ArrayList<>(Arrays.asList(new String[] {"prodo", "prodo"}));
+		List<String> nameList = new ArrayList<>(Arrays.asList("prodo", "prodo"));
 		assertThatThrownBy(() -> {
-			nameValidator.checkDuplicatedName(nameList);
+			NameValidator.checkNameList(nameList);
 		}).isInstanceOf(Exception.class);
 	}
 }
